--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  connectivity: ^3.0.3
-  wifi_flutter: ^0.1.0+1
-  wifi_iot: ^0.3.0
-  wifi: ^0.1.5
+  # connectivity: ^3.0.3
+  # wifi_flutter: ^0.1.0+1
+  # wifi_iot: ^0.3.0
+  # wifi: ^0.1.5
 
 dev_dependencies:
   flutter_test:
